--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,48 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '8.0.2' apply false
-    id 'com.android.library' version '8.0.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+buildscript {
+    ext {
+        kotlin_version = '1.9.0'
+        hilt_version = '2.42'
+        retrofit_version = '2.9.0'
+        okhttp_version = '4.9.3'
+        okio_version = '2.8.0'
+    }
+    repositories {
+        google()
+        mavenCentral()
+
+        maven {
+            url 'https://jitpack.io'
+        }
+        maven {
+            url "https://mvn.mob.com/android"
+        }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.0.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.7.3"
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.1'
+
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url 'https://jitpack.io'
+        }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
