--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     ext {
-        kotlin_version = '1.7.10'
+        kotlin_version = '1.8.10'
         hilt_version = '2.43.2'
         retrofit_version = '2.9.0'
         okhttp_version = '4.9.3'
         okio_version = '2.8.0'
+        navgation_version = '2.4.1'
     }
     repositories {
         google()
@@ -22,7 +23,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navgation_version"
         classpath 'org.greenrobot:greendao-gradle-plugin:3.3.1'
 
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
