--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,6 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
 
     implementation 'org.greenrobot:eventbus:3.0.0'
+
+    implementation 'com.github.prolificinteractive:material-calendarview:1.6.0'
 }
