--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ui.activity.CalendarActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustNothing" />
     </application>
 
 </manifest>
