--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,20 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
 apply plugin: 'org.greenrobot.greendao'
-apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 apply plugin: 'androidx.navigation.safeargs'
 
 
 android {
     namespace 'com.yilin.mybase'
-    compileSdk 33
+    compileSdk rootProject.ext.compileSdkVersion
 
     defaultConfig {
         applicationId "com.yilin.mybase"
-        minSdk 21
-        targetSdk 33
+        minSdk rootProject.ext.minSdkVersion
+        targetSdk rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -44,10 +44,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation project(':common')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -64,20 +61,10 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$navgation_version"
     implementation "androidx.navigation:navigation-ui-ktx:$navgation_version"
 
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
-
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-//    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-//    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-scalars:$retrofit_version"
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
-    implementation "com.squareup.okio:okio:$okio_version"
+    implementation 'com.github.prolificinteractive:material-calendarview:1.6.0'
 
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+
     implementation 'com.github.bumptech.glide:glide:4.14.2'
-
-    implementation 'org.greenrobot:eventbus:3.0.0'
-
-    implementation 'com.github.prolificinteractive:material-calendarview:1.6.0'
 }
