--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+
+    implementation 'org.greenrobot:eventbus:3.0.0'
 }
