--- a/common/build.gradle
+++ b/common/build.gradle
@@ -55,6 +55,6 @@ dependencies {
 
     api 'com.github.bumptech.glide:glide:4.14.2'
 
-    implementation 'org.greenrobot:eventbus:3.0.0'
+    api 'org.greenrobot:eventbus:3.0.0'
 
 }
